@startuml

title __CORE's Class Diagram__\n

  package com.code.adventure.game {
    package com.code.adventure.game.entities {
      class Adventurer {
      }
    }
  }
  

  package com.code.adventure.game {
    package com.code.adventure.game.util {
      class Assets {
      }
    }
  }
  

  package com.code.adventure.game {
    package com.code.adventure.game.util {
      class ChaseCam {
      }
    }
  }
  

  package com.code.adventure.game {
    class ChooseLevelScreen {
    }
  }
  

  package com.code.adventure.game {
    class CodeAdventureGame {
    }
  }
  

  package com.code.adventure.game {
    package com.code.adventure.game.util {
      class Constants {
      }
    }
  }
  

  package com.code.adventure.game {
    class DeathScreen {
    }
  }
  

  package com.code.adventure.game {
    package com.code.adventure.game.overlays {
      class DoWhileLoop {
      }
    }
  }
  

  package com.code.adventure.game {
    package com.code.adventure.game.entities {
      class Enemy {
      }
    }
  }
  

  package com.code.adventure.game {
    package com.code.adventure.game.util {
      class Enums {
      }
    }
  }
  

  package com.code.adventure.game {
    package com.code.adventure.game.overlays {
      class ForLoop {
      }
    }
  }
  

  package com.code.adventure.game {
    package com.code.adventure.game.overlays {
      class GamePlayHud {
      }
    }
  }
  

  package com.code.adventure.game {
    class GameplayScreen {
    }
  }
  

  package com.code.adventure.game {
    package com.code.adventure.game.entities {
      class Item {
      }
    }
  }
  

  package com.code.adventure.game {
    package com.code.adventure.game.entities {
      class Key {
      }
    }
  }
  

  package com.code.adventure.game {
    class Level {
    }
  }
  

  package com.code.adventure.game {
    package com.code.adventure.game.util {
      class LevelLoader {
      }
    }
  }
  

  package com.code.adventure.game {
    class MainMenuScreen {
    }
  }
  

  package com.code.adventure.game {
    package com.code.adventure.game.overlays {
      class OnscreenControls {
      }
    }
  }
  

  package com.code.adventure.game {
    package com.code.adventure.game.entities {
      class Path {
      }
    }
  }
  

  package com.code.adventure.game {
    package com.code.adventure.game.entities {
      class Platform {
      }
    }
  }
  

  package com.code.adventure.game {
    class QuizScreen {
    }
  }
  

  package com.code.adventure.game {
    package com.code.adventure.game.util {
      class TextureMapObjectRenderer {
      }
    }
  }
  

  package com.code.adventure.game {
    package com.code.adventure.game.util {
      class Utils {
      }
    }
  }
  

  package com.code.adventure.game {
    package com.code.adventure.game.overlays {
      class WhileLoop {
      }
    }
  }
  

  Adventurer o-- Level : level
  Adventurer o-- Direction : facing
  Adventurer o-- WalkState : walkState
  Adventurer o-- JumpState : jumpState
  Adventurer o-- AttackState : attackState
  Adventurer o-- Enemy : nearEnemy
  Adventurer o-- Item : item
  Assets -up-|> Disposable
  Assets -up-|> AssetErrorListener
  Assets o-- AdventurerAssets : adventurerAssets
  Assets o-- GameAssests : gameAssests
  Assets o-- UiAssests : uiAssests
  Assets o-- ItemAssests : itemAssests
  Assets o-- OnscreenControlsAssets : onscreenControlsAssets
  Assets o-- EnemyAssests : enemyAssests
  ChaseCam o-- Adventurer : target
  ChooseLevelScreen -up-|> ScreenAdapter
  ChooseLevelScreen o-- CodeAdventureGame : game
  CodeAdventureGame -up-|> Game
  DeathScreen -up-|> ScreenAdapter
  DeathScreen o-- CodeAdventureGame : game
  DoWhileLoop -up-|> Stage
  Enemy -up-|> Item
  ForLoop -up-|> Stage
  GameplayScreen -up-|> InputProcessor
  GameplayScreen -up-|> ScreenAdapter
  GameplayScreen o-- CodeAdventureGame : game
  GameplayScreen o-- Level : level
  GameplayScreen o-- OnscreenControls : onscreenControls
  GameplayScreen o-- GamePlayHud : hud
  GameplayScreen o-- ChaseCam : chaseCam
  Key -up-|> Item
  Level o-- GameplayScreen : gameplayScreen
  MainMenuScreen -up-|> ScreenAdapter
  MainMenuScreen o-- CodeAdventureGame : game
  OnscreenControls -up-|> InputAdapter
  OnscreenControls o-- Adventurer : adventurer
  Path -up-|> Item
  QuizScreen -up-|> ScreenAdapter
  QuizScreen o-- CodeAdventureGame : game
  TextureMapObjectRenderer -up-|> OrthogonalTiledMapRenderer
  WhileLoop -up-|> Stage


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
